# paper_pulse

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  config.py  pyproject.toml  run.py  seed.py
backend/app/: __init__.py
backend/app/common/: base_repository.py  error_handler.py  logger.py  logging_middleware.py
backend/app/modules/authors/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/papers/: models.py  repository.py  routes.py  schemas.py  service.py
backend/docs/: TESTING_GUIDE.md
backend/scripts/: dump_schemas.py
backend/tests/: base.py  conftest.py  test_authors_service.py
backend/tests/integration/: test_authors_api.py  test_papers_api.py
backend/tests/unit/: test_authors_service.py
docs/: API_GENERATION.md  API_TYPE_SYNC.md  authors-data-flow.md  specifications.md
docs/standards/: api_sync.md
frontend/: .prettierrc  README.md  package-lock.json  package.json  vitest.config.mts
frontend/scripts/: gen_zod.js
frontend/specs/: AuthorCreate.json  AuthorResponse.json  PaperCreate.json  PaperResponse.json  api_schema.json  openapi.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/authors/: page.tsx
frontend/src/app/authors/[id]/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Providers.tsx
frontend/src/hooks/: useAuthors.ts  usePapers.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  schemas.ts
frontend/test/: README.md  setup.ts
frontend/test/components/: Header.test.tsx
frontend/test/components/ui/: Button.test.tsx
frontend/test/lib/: utils.test.ts
frontend/test/pages/: AuthorsPage.test.tsx  PapersPage.test.tsx
guidances/: agents.md
